--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
  <meta name="google-site-verification" content="O7J7xOeZS_PG92PC8dBoXs1Ufctgi5AqPe0iE6Bgl4Q" />  
     
-    <title>Rapido</title>
+    <title>Rapigo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
